# wsc_spot_poll

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  setup.cfg  wsc_spot_poll.py
src/wsc_spot_poll/: SpotPoller.py  __init__.py  __main__.py  spot_poller.py
test/: test_spot_poll.py  trackers.yaml
wsc_spot_poll/: SpotPoller.py  __main__.py
